--- a/debian/control
+++ b/debian/control
@@ -23,9 +23,9 @@ Build-Depends: dpkg-dev (>= 1.14.8), debhelper (>= 9), dh-autoreconf,
  libpoppler-cpp-dev, libspectre-dev, librsvg2-dev
 Build-Depends-Indep: doxygen, imagemagick
 Standards-Version: 3.9.8
-Vcs-Git: https://anonscm.debian.org/pkg-e/libs/efl.git
-Vcs-Browser: https://anonscm.debian.org/gitweb/?p=pkg-e/libs/efl.git
-Homepage: http://www.enlightenment.org
+Vcs-Git: https://anonscm.debian.org/git/pkg-e/libs/efl.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-e/libs/efl.git/
+Homepage: https://www.enlightenment.org
 
 # EINA
 
