--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: dpkg-dev (>= 1.14.8), debhelper (>= 9), dh-autoreconf,
  libbullet-dev, libpulse-dev, liblz4-dev, libwebp-dev, libharfbuzz-dev,
  libsystemd-dev, libavahi-client-dev, systemd, libvlc-dev, libraw-dev,
  libpoppler-cpp-dev, libspectre-dev, librsvg2-dev
-Build-Depends-Indep: doxygen, imagemagick
+Build-Depends-Indep: doxygen, ghostscript, imagemagick, texlive-font-utils
 Standards-Version: 3.9.8
 Vcs-Git: https://anonscm.debian.org/git/pkg-e/libs/efl.git
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-e/libs/efl.git/
