--- a/debian/rules
+++ b/debian/rules
@@ -32,6 +32,9 @@ override_dh_auto_configure:
 	--enable-image-loader-webp \
 	--enable-harfbuzz \
 	--enable-systemd \
+	--enable-static \
+	--enable-image-loader-webp \
+	--with-generic_vlc \
 	--enable-i-really-know-what-i-am-doing-and-that-this-will-probably-break-things-and-i-will-fix-them-myself-and-send-patches-aba \
 	$(arch_flags)
 
