--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,8 @@ Build-Depends: dpkg-dev (>= 1.14.8), debhelper (>= 9), dh-autoreconf,
  libpoppler-cpp-dev, libspectre-dev, librsvg2-dev
 Build-Depends-Indep: doxygen, imagemagick
 Standards-Version: 3.9.6
-Vcs-Git: git://anonscm.debian.org/pkg-e/libs/efl.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-e/libs/efl.git
+Vcs-Git: https://anonscm.debian.org/pkg-e/libs/efl.git
+Vcs-Browser: https://anonscm.debian.org/gitweb/?p=pkg-e/libs/efl.git
 Homepage: http://www.enlightenment.org
 
 # EINA
