--- a/debian/rules
+++ b/debian/rules
@@ -70,7 +70,7 @@ override_dh_shlibdeps:
 	dh_shlibdeps -plibefreet1a -- -xlibefreet-bin
 
 override_dh_strip:
-	dh_strip --dbg-package=efl-dbg
+	dh_strip --ddeb-migration='efl-dbg (<< 1.8.1-2~)'
 
 override_dh_clean:
 	dh_clean
