--- a/debian/control
+++ b/debian/control
@@ -30,12 +30,21 @@ Homepage: http://www.enlightenment.org
 # EINA
 
 Package: libeina1
+Section: oldlibs
+Priority: extra
+Architecture: all
+Depends: ${misc:Depends}, libeina1a
+Description: transitional libeina1 package
+ This is a transitional dummy package to ease the migration from
+ libeina1 to libeina1a.  You can safely remove this package.
+
+Package: libeina1a
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libeina0
-Breaks: libeet1 (<= 1.4.0~beta+1.4.0)
+Breaks: libeet1 (<= 1.4.0~beta+1.4.0), libeina1 (<= 1.18.1-2)
 Description: Enlightenment Foundation Library providing optimized data types
  Eina is a multi-platform library that provides optimized data types and a few
  tools. It supports the following data types:
@@ -69,7 +78,7 @@ Description: Enlightenment Foundation Library providing optimized data types ext
 Package: libeina-dev
 Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, libeina1 (= ${binary:Version}), pkg-config,
+Depends: ${misc:Depends}, libeina1a (= ${binary:Version}), pkg-config,
  libsystemd-dev
 Recommends: efl-doc
 Description: Development files for libeina
@@ -110,7 +119,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Enlightenment DR17 file chunk reading/writing library
  Eet is a tiny library designed to write an arbitrary set of chunks of data to a
  file and optionally compress each chunk (very much like a zip file) and allows
@@ -138,7 +147,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library providing geo information management in EFL
  Elocation is meant as a convenience library to ease application
  developers the usage of geo information in their apps. Adding a geo
@@ -170,7 +179,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library providing physics functions to Evas and Edje
  EPhysics is a new library that glues in the Bullet physics engine
  into EFL to allow you to make use of an entire physics engine easily
@@ -203,7 +212,7 @@ Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}, libevas1-engine
 Recommends: libevas-loaders
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Enlightenment DR17 advanced canvas library
  Evas is an advanced canvas library, providing six engines for rendering: X11,
  OpenGL (hardware accelerated), DirectFB, the framebuffer, Microsoft Windows
@@ -250,7 +259,7 @@ Architecture: any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libevas-0.9.9.050a-engines
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Replaces: libevas-engines, libevas-engines-extras
 Provides: libevas1-engine-software-x11, libevas1-engine-gl-x11, libevas1-engine
 Description: Evas module providing the X11 engines
@@ -268,7 +277,7 @@ Architecture: linux-any
 Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libevas-0.9.9.050a-engines-extras
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Replaces: libevas-engines-extras, libevas1-engine-fb
 Provides: libevas1-engine
 Description: Evas module providing the Framebuffer engine
@@ -286,7 +295,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Core abstraction layer for enlightenment DR 0.17
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -299,7 +308,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore functions for audio playback and recording
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -315,7 +324,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore functions for dealing with Avahi mDNS/DNS-SD
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -331,7 +340,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore Connection Library
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -346,7 +355,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore Evas Wrapper Library
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -361,7 +370,7 @@ Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore frame buffer system functions
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -376,7 +385,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore File Library
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -391,7 +400,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore Input Method Framework module
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -407,7 +416,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore input module
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -422,7 +431,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore inter-process communication functions
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -437,7 +446,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Ecore functions for dealing with the X Window System
  This is the core event abstraction layer and X abstraction layer that makes
  doing selections, Xdnd, general X stuff, and event loops, timeouts and idle
@@ -499,7 +508,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library that provides vector graphics capabilities for EFL
  Ector provides a new retained rendering library that is used by Evas
  to provide Evas_Object_VG. This is a new Evas_Object that provides a
@@ -564,7 +573,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: libefreet1 (<= 1.8.4-1), libeina1 (<< ${source:Upstream-Version})
+Breaks: libefreet1 (<= 1.8.4-1), libeina1a (<< ${source:Upstream-Version})
 Description: Library that implements freedesktop.org specs for use with E17/EFL
  An implementation of several specifications from freedesktop.org intended for
  use in Enlightenment DR17 (e17) and other applications using the Enlightenment
@@ -636,7 +645,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Suggests: libembryo-bin
 Description: SMALL-based abstract machine (AMX) bytecode interpreter
  Embryo is primarily a shared library that gives you an API to load
@@ -689,7 +698,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libelementary1 (<= 1.7.7-1), libeina1 (<< ${source:Upstream-Version})
+Breaks: libelementary1 (<= 1.7.7-1), libeina1a (<< ${source:Upstream-Version})
 Suggests: libedje-bin (= ${binary:Version})
 Description: Graphical layout and animation library
  Edje is a graphical layout and animation library for animated resizable,
@@ -722,7 +731,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library providing non-blocking I/O using threads
  This library is part of the Enlightenment Foundation Libraries (EFL). It is
  intended to provide non-blocking IO by using thread for all operations that
@@ -752,7 +761,7 @@ Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library for manipulating devices through udev
  This library is part of the Enlightenment Foundation Libraries (EFL). It
  interfaces directly with libudev, avoiding such middleman daemons as
@@ -807,7 +816,7 @@ Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Lua wrapper and convenience layer for EFL shared objects
  Elua is a new LuaJIT based runtime (name is temporary) for rapid
  application development with the EFL. It counts on Eolian to provide
@@ -849,7 +858,7 @@ Architecture: linux-any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Compression and encryption utilities and abstractions
  Emile provides a library to bring together serialization, compression
  and ciphering. It is a low-level library and can be used by anything
@@ -875,7 +884,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Media object creation/manipulation library
  Emotion is a library that allows playing audio and video files, using one of
  its backends (GStreamer, xine or generic shm player).
@@ -914,7 +923,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library to create thumbnails for images and documents
  Ethumb uses Evas to generate thumbnail images of given files. The API allows
  great customization of the generated files and also helps complying to
@@ -925,7 +934,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: Library to create thumbnails using a D-Bus-actived server
  Ethumb-Client creates thumbnails by communicating with a thumbnail generation
  server using standard D-Bus protocol. The server uses Ethumb itself to
@@ -970,7 +979,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libeina1 (<< ${source:Upstream-Version})
+Breaks: libeina1a (<< ${source:Upstream-Version})
 Description: EO object parser and C code generator - runtime library
  Eolian parses Enlightenment's meta-data (.eo) files and can then
  generate C code along with header files.
