--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: efl
 Section: libs
 Priority: optional
 Maintainer: Debian Pkg-e Team <pkg-e-devel@lists.alioth.debian.org>
-Uploaders: Albin Tonnerre <lutin@debian.org>
+Uploaders: Nicolas Braud-Santoni <nicolas@braud-santoni.eu>,
+           Albin Tonnerre <lutin@debian.org>,
+           Ross Vandegrift <ross@kallisti.us>
 Build-Depends: dpkg-dev (>= 1.14.8), debhelper (>= 9), dh-autoreconf,
  pkg-config, check, autopoint,
  zlib1g-dev, libjpeg-dev, libpng-dev, libtiff-dev, libgif-dev, libxpm-dev,
