--- a/debian/rules
+++ b/debian/rules
@@ -37,6 +37,9 @@ override_dh_auto_configure:
 	--enable-static \
 	--enable-image-loader-webp \
 	--with-generic_vlc \
+	--enable-wayland \
+	--enable-drm \
+	--enable-elput \
 	$(arch_flags)
 
 override_dh_auto_build:
