--- a/debian/rules
+++ b/debian/rules
@@ -16,9 +16,6 @@ LETSBUILDINDEP := $(shell if dh_listpackages | grep -q efl-doc ; then \
 	echo yes ;\
 	else echo no ; fi)
 
-export XDG_RUNTIME_DIR=/tmp
-export HOME=/tmp
-
 %:
 	dh $@ --with autoreconf --parallel
 
@@ -44,14 +41,14 @@ override_dh_auto_configure:
 override_dh_auto_build:
 	dh_auto_build --verbose --parallel
 ifeq ($(filter yes,$(LETSBUILDINDEP)),yes)
-	$(MAKE) doc
+	$(CURDIR)/debian/fake_home.sh $(MAKE) doc
 endif
 
 override_dh_auto_build-indep:
 	$(MAKE) doc
 
 override_dh_auto_test:
-	env CK_DEFAULT_TIMEOUT=300 dh_auto_test --verbose -- -j1 VERBOSE=yes
+	$(CURDIR)/debian/fake_home.sh env CK_DEFAULT_TIMEOUT=300 dh_auto_test --verbose -- -j1 VERBOSE=yes
 
 # The install phase doesn't work reliably in parallel
 # Force it to run with only 1 thread to avoid issues
