debian/gbp.conf: import & build upstream tarballs

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -2,9 +2,17 @@
 cleaner = fakeroot debian/rules clean
 
 [buildpackage]
-upstream-tag = v%(version)s
-debian-branch = debian/sid
+upstream-tag = upstream-tarball/v%(version)s
+debian-branch = debian-tarball/sid
 
 [dch]
-upstream-tag = v%(version)s
-debian-branch = debian/sid
+upstream-tag = upstream-tarball/v%(version)s
+debian-branch = debian-tarball/sid
+
+[import-orig]
+pristine-tar = True
+upstream-branch = upstream-tarball
+upstream-vcs-tag = v%(version)s
+upstream-tag = upstream-tarball/v%(version)s
+debian-branch = debian-tarball/sid
+merge-mode = replace
