--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: libeina0
+Conflicts: libeina0, libeina1
 Breaks: libeet1 (<= 1.4.0~beta+1.4.0), libeina1 (<= 1.18.1-2),
         libeina-bin (<= ${source:Upstream-Version}),
         libeet-bin (<= ${source:Upstream-Version}),
