--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Build-Depends: dpkg-dev (>= 1.14.8), debhelper (>= 9), dh-autoreconf,
  libsystemd-dev, libavahi-client-dev, systemd, libvlc-dev, libraw-dev,
  libpoppler-cpp-dev, libspectre-dev, librsvg2-dev,
  wayland-protocols, libwayland-dev, libgbm-dev, libxkbcommon-dev, libinput-dev,
- libscim-dev, libibus-1.0-dev
+ libscim-dev, libibus-1.0-dev, netbase
 Build-Depends-Indep: doxygen, ghostscript, imagemagick, texlive-font-utils
 Standards-Version: 3.9.8
 Vcs-Git: https://anonscm.debian.org/git/pkg-e/libs/efl.git
