--- a/debian/rules
+++ b/debian/rules
@@ -53,7 +53,9 @@ override_dh_auto_build-indep:
 	$(MAKE) doc
 
 override_dh_auto_test:
-	$(CURDIR)/debian/fake_home.sh env CK_DEFAULT_TIMEOUT=300 dh_auto_test --verbose -- -j1 VERBOSE=yes
+	$(CURDIR)/debian/fake_home.sh dbus-run-session -- \
+		env CK_DEFAULT_TIMEOUT=300 \
+		dh_auto_test --verbose -- -j1 VERBOSE=yes
 
 # The install phase doesn't work reliably in parallel
 # Force it to run with only 1 thread to avoid issues
